--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "export.js",
   "dependencies": {
     "page": "1.5.0",
-    "vue": "0.10.6",
+    "vue": "git://github.com/k88hudson/vue#csp-10.6",
     "watchjs": "0.0.0",
     "clone": "0.1.18",
     "xhr": "1.16.1",
